<resources>
    <string name="app_name">Dragon Ball Z</string>

    <string name="inicio_frag_tv_que_es">¿Qué es Dragon Ball Z?</string>
    <string name="inicio_frag_tv_que_es_resp">Es un manga escrito e ilustrado por Akira Toriyama. Fue publicado originalmente en la revista Shōnen Jump, de la editorial
        japonesa Shūeisha, entre 1984 y 1995.1​2​ Su trama describe las aventuras de Gokū, un guerrero saiyajin, cuyo fin es proteger a la Tierra de otros seres que quieren conquistarla y
        exterminar a la humanidad. Conforme transcurre la trama, conoce a otros personajes que le ayudan en este propósito.</string>
    <string name="inicio_frag_tv_por_que">¿Por qué verlo?</string>
    <string name="inicio_frag_tv_por_que_resp">Porque este sentimiento jamas te lo causara otro animes, ya que su historia, su trama y personajes te atraparan y desarrollaras un aprecio hacia uno u otro personaje.</string>
    <string name="inicio_frag_tv_info">Personaje Principal: Son Goku</string>
    <string name="inicio_frag_tv_info_resp">
        \u0009 &#8226; Es un evento exclusivo para estudiantes con suscripción activa en Platzi.\n
        \u0009 &#8226; (Sí esto te apasiona y no tienes una suscripción activa, adquiere ya mismo tu Plan Expert).\n
        \u0009 &#8226; Fecha: Sábado 3 de Agosto de 2019.\n
        \u0009 &#8226; Lugar: Centro Cultural Roberto Cantoral.\n
        \u0009 &#8226; Dirección: Puente Xoco s/n, Xoco, 03330 Ciudad de México, CDMX.</string>
    <string name="principal_resp">
        Originalmente enviado a la Tierra como un infante volador con la misión de conquistarla. Sin embargo, el caer por un barranco le proporcionó un brutal golpe que si bien casi lo mata, este alteró su memoria y anuló
        todos los instintos violentos de su especie, lo que lo hizo crecer con un corazón puro y bondadoso, pero conservando todos los poderes de su raza.
    </string>
</resources>