<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="4dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/altoImageViewHome"
                       android:src="@drawable/young_gohan"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="15dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamahnoTitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="@dimen/margin_home_subtitulo"
                        android:layout_marginRight="@dimen/margin_home_subtitulo"
                        android:layout_marginTop="@dimen/margin_home_subtitulo"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textStyle="bold"
                        android:textSize="@dimen/tamahnoSubtitulo"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="@dimen/margin_home_subtitulo"
                        android:layout_marginRight="@dimen/margin_home_subtitulo"
                        android:layout_marginTop="@dimen/margin_home_subtitulo"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="4dp"
                    android:layout_margin="15dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/altoImageViewHome"
                            android:src="@drawable/son_goku"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimary"
                            android:layout_marginTop="15dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/inicio_frag_tv_por_que"
                            android:textStyle="bold"
                            android:textSize="@dimen/tamahnoTitulo"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginLeft="@dimen/margin_home_subtitulo"
                            android:layout_marginRight="@dimen/margin_home_subtitulo"
                            android:layout_marginTop="@dimen/margin_home_subtitulo"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimary"
                            android:layout_marginTop="10dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/inicio_frag_tv_por_que_resp"
                            android:textStyle="bold"
                            android:textSize="@dimen/tamahnoSubtitulo"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginLeft="@dimen/margin_home_subtitulo"
                            android:layout_marginRight="@dimen/margin_home_subtitulo"
                            android:layout_marginTop="@dimen/margin_home_subtitulo"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="4dp"
                    android:layout_margin="15dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/altoImageViewHome"
                            android:src="@drawable/kid_goku"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimary"
                            android:layout_marginTop="15dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/inicio_frag_tv_info"
                            android:textStyle="bold"
                            android:textSize="@dimen/tamahnoTitulo"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginLeft="@dimen/margin_home_subtitulo"
                            android:layout_marginRight="@dimen/margin_home_subtitulo"
                            android:layout_marginTop="@dimen/margin_home_subtitulo"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorPrimary"
                            android:layout_marginTop="10dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/principal_resp"
                            android:textStyle="bold"
                            android:textSize="@dimen/tamahnoSubtitulo"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginLeft="@dimen/margin_home_subtitulo"
                            android:layout_marginRight="@dimen/margin_home_subtitulo"
                            android:layout_marginTop="@dimen/margin_home_subtitulo"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>